added express route, started on fron end

--- a/views/index.html
+++ b/views/index.html
@@ -34,7 +34,7 @@
               <input type="text" name="" class="form-control" id="emaillogin" placeholder="Email or Phone">
 
               <input type="text" name="" class="form-control" id="passwordlogin" placeholder="Password">
-              <button onclick="band()" class="btn btn-dark btn-block">Login</button>
+              <button onclick="formLogin()" class="btn btn-dark btn-block">Login</button>
 
             </div>
 
