--- a/views/bands.html
+++ b/views/bands.html
@@ -12,6 +12,85 @@
         <h1 id = "gighubhead">GigHub</h1>
     </div>
 </header>
+<div class="d-flex justify-content-center align-items-center mt-5">
+
+
+  <div class="card">
+
+      <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+          <li class="nav-item text-center">
+            <a class="nav-link active btl" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Login</a>
+          </li>
+          <li class="nav-item text-center">
+            <a class="nav-link btr" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">Signup</a>
+          </li>
+         
+        </ul>
+        <div class="tab-content" id="pills-tabContent">
+          <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+            
+            <div class="form px-4 pt-5">
+
+              <input type="text" name="" class="form-control" id="emaillogin" placeholder="Email or Phone">
+
+              <input type="text" name="" class="form-control" id="passwordlogin" placeholder="Password">
+              <button onclick="formLogin()" class="btn btn-dark btn-block">Login</button>
+
+            </div>
+
+
+
+          </div>
+          <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
+            
+
+            <div class="form px-4">
+
+              <input type="text" name="" class="form-control" placeholder="Name">
+
+              <input type="text" name="" class="form-control" placeholder="Email">
+
+              <input type="text" name="" class="form-control" placeholder="Phone">
+
+              <input type="text" name="" class="form-control" placeholder="Password">
+
+              <button class="btn btn-dark btn-block">Signup</button>
+              
+
+            </div>
+
+
+
+          </div>
+          
+         </div>
+      
+    
+    
+
+  </div>
+  
+
+</div>
+  <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
+  <script src="scripts/indexhandle.js"></script>
+</body>
+</html>
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Sample Site</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel = "stylesheet" href = "./css/index.css"> 
+</head>
+<body>
+  <header>
+    <div id = "header">
+        <h1 id = "gighubhead">GigHub</h1>
+    </div>
+</header>
 <div class="homebtns">
 <a class="btn btn-dark"id = "bandbtn" onclick="band()">Band</a>
 <a class="btn btn-dark" id = "fanbtn">Fan</a>
@@ -20,4 +99,4 @@
   <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
   <script src="scripts/indexhandle.js"></script>
 </body>
-</html>
+</html> -->
