added band search and autofill

--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
 </header>
 <div class="homebtns">
 <a class="btn btn-dark"id = "bandbtn" onclick="band()">Band</a>
-<a class="btn btn-dark" id = "fanbtn">Fan</a>
+<a class="btn btn-dark" id = "fanbtn" onclick="fan()">Fan</a>
     
 </div>
   <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
