--- a/views/bandsearch.html
+++ b/views/bandsearch.html
@@ -4,13 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>Document</title>
+    <link rel = "stylesheet" href = "./css/index.css">
+    <title>Artist Search</title>
 </head>
-<body>
+<body id="band-back">
+    <section class="music-greeting">
+            <h1>Hello Music Lover!</h1>
+            <p>Get ready to turn up the volume and dive into the groove.</p>
+            <p>Whether you're into head-banging rock, soothing jazz, or beats that make you move, you're in the right place.</p>
+            <p>Feel the rhythm, embrace the melody, and let the music carry you away!</p>
+    </section>
     <div class="form-outline" data-mdb-input-init>
         <input list="band-list" type="text" id="form12" class="form-control" />
         <datalist id="band-list"></datalist>
-        <label class="form-label" for="form12">Example label</label>
+        <label class="form-label" for="form12">Select a city</label>
       </div>
       <script src="scripts/bandsearch.js"></script>
 </body>
