--- a/views/bands.html
+++ b/views/bands.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Sample Site</title>
+  <title>Band Account</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel = "stylesheet" href = "./css/index.css"> 
 </head>
@@ -30,12 +30,17 @@
           <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
             
             <div class="form px-4 pt-5">
+              <section id="welcome-msg">
+              <p id="artists-msg">Hello artists!</p>
+              <p>We're thrilled to have you here and appreciate the incredible music you bring to the world.</p>
+            </section>
 
               <input type="text" name="" class="form-control" id="emaillogin" placeholder="Email or Phone">
 
               <input type="text" name="" class="form-control" id="passwordlogin" placeholder="Password">
-              <button onclick="formLogin()" class="btn btn-dark btn-block">Login</button>
-
+              <section>
+              <button onclick="formLogin()" class="log-btn">Login</button>
+            </section>
             </div>
 
 
