--- a/views/bandaccount.html
+++ b/views/bandaccount.html
@@ -4,25 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel = "stylesheet" href = "./css/index.css"> 
 </head>
 <body>
-    <input>
+    <h1>Welcome</h1>
+    <img id="nirvanaimg"src = "../public/css/images/download.png" alt="nirvana">
 </body>
-<script id="document-template" type="text/x-handlebars-template">
-    <div>
-        {{#each this}}
-            <div class="row">
-                <div class="col-md-12">
-                    <h2>Bands</h2>
-                        {{#DocumentList}}
-                            <p>{{band}} at {{city}}</p>
-                        {{/DocumentList}}
-                </div>
-            </div>
-        {{/each}}
-        
-            <p>There are no documents available at this time</p>
-        
-    </div>
-</script>
 </html>
